Wed Mar  7 19:24:02 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>

        * clone_build_tree.pl:

          Adding flag to allow linking files normally avoided, but not part of
          -l flag operations.

Mon Feb 27 21:33:06 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * docs/html/MakeProjectCreator.css:
        * docs/html/MakeProjectCreator.html:

          HTML documentation update from Kevin Stanley of OCI.

Tue Feb 21 20:13:24 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * templates/vc10.mpd:

          Support multiple source files with the same name (in different
          directories) in a single project.

Tue Jan 24 19:01:18 UTC 2012  Chip Jones  <jonesc@ociweb.com>

        * ChangeLog:
          Added changelog entry for -workers options.

Tue Jan 24 18:26:46 UTC 2012  Chip Jones  <jonesc@ociweb.com>

        * docs/MPC.sgml:
        * docs/USAGE:
        * docs/html/MakeProjectCreator.html:

          Added documentation for -workers options.

Mon Jan 16 22:01:41 UTC 2012  Chip Jones  <jonesc@ociweb.com>

        * modules/Creator.pm:

          Modifications to support multiprocess MPC.

        * modules/Depgen/DependencyEditor.pm:
        * modules/Depgen/Driver.pm:

          Modified dependency generator to support appending to existing
          files and generating dependencies for IDL files.

        * modules/Driver.pm:
        * modules/Options.pm:
        * modules/Parser.pm:
        * modules/ProjectCreator.pm:
        * modules/TemplateParser.pm:
        * modules/WorkspaceCreator.pm:

          Modified MPC to generate projects in separate processes.
          This experimental feature is enabled with the
          command-line option '-workers.' It's behavior can
          be modified with the '-workers_dir' and '-workers_port'
          directives.

          This is a merge of work done in the 'mpc_performance' branch.

Tue Dec 20 11:42:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
