@@ -1,3 +1,11 @@
+Thu Mar  8 06:50:28 UTC 2011  Martin Corino  <mcorino@remedy.nl>
+
+        * modules/TemplateParser.pm:
+
+          Fix to solve problems with IDL projects using the combination of
+          setting 'gendir' and defining custom output files (in separate
+          directory/ies *not* equal to 'gendir').
+
 Wed Mar  7 19:24:02 UTC 2012  Brian Johnson  <johnsonb@ociweb.com>
 
         * clone_build_tree.pl:
